_notes/errbyfile/Speed.java.txt
ru\metaculture\protection\Speed.java:76: error: incompatible types: 
Object cannot be converted to Entity
         for (Entity var8 : var4) {
                            ^

  ru\metaculture\protection\Speed.java:76: error: incompatible types: 
Object cannot be converted to Entity
           for (Entity var8 : var4) {
                              ^
